message PhiCmd {
	required uint32 type = 1;
	required uint32 arg_cnt = 2;
	repeated int64 int_args = 3;
	repeated uint64 uint_args = 4;
	repeated string str_args = 5;
	repeated bytes extra_args = 6;
}

message PhiDevice {
	required string name = 1;
	required bool is_busy = 2 [default = false];
}
